--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "engines": {
     "vscode": "^1.86.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/crislainesc/frosty_glow.git"
+  },
   "categories": [
     "Themes"
   ],
