--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "displayName": "Frosty Glow",
   "publisher": "crislainesc",
   "description": "For those who are sensitive to light environments and dark themes, the purpose of this theme is to bring comfort with light and soft colors that are not so bright.",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.86.0"
   },
+  "icon": "icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/crislainesc/frosty_glow.git"
